--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ jei_version=15.2.0.23
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.1.43
+forge_version=47.1.44
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -49,7 +49,7 @@ mod_name=Potion Farmer
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=0.1.0-PRE_ALPHA
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
