--- a/gradle.properties
+++ b/gradle.properties
@@ -47,7 +47,7 @@ mod_id=potionfarmer
 # The human-readable display name for the mod.
 mod_name=Potion Farmer
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
 mod_version=0.1.0-PRE_ALPHA
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
